--- a/index.html
+++ b/index.html
@@ -4,25 +4,35 @@
         <title>Anime Info Generator</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="index.js"></script>
+        <script src="index.js" defer></script>
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+        <style>
+            .showItem{
+                transition: .3s;
+            }
+            .showItem:hover{   
+                box-shadow: 0 4px 2px rgba(0,0,0,.3);
+                transform: translateY(-10px);
+            }
+        </style>
     </head>
-    <body>
+    <body  class="bg-light">
         <nav class="nav navbar-dark bg-dark text-white p-3 shadow flex flex-column">
             <h1>Anime Info Generator</h1>
-            <small class="pb-1">This Will Generate the Up To 15 Matching Results. Information found from <strong>Jikan Anime Database!</strong></small>
-            <div class="form-group">
-                <label class="d-block" for="title">Please Enter Anime Title Below</label>
-                <input class="form-control" type="text" id="title" placeholder="Attack on Titan">
-                <button class="btn btn-primary mt-2" onclick="myFunction()">Submit</button>
+            <p class="pb-3">Generates the Up To 15 Matching Results. Information found from <strong>Jikan Anime Database.</strong></p>
+            <div class="form-group d-flex align-items-center" style="max-width: 1000px;">
+                <label for="title" style="white-space: nowrap; margin: 0;">Enter Anime Title : </label>
+                <input class="ml-2 form-control" type="text" id="title" placeholder="Attack on Titan" value="">
+                <button class="btn btn-primary ml-2" onclick="getAnime()">Submit</button>
             </div>
         </nav>
         <main>
-            <article class="container-fluid">
-                <div class="row" id="anime-display"></div>
+            <article>
+                <div id="anime-container" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(750px, auto))">
+                </div>
             </article>
         </main>
     </body>
