adjust min width of web app

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             }
         </style>
     </head>
-    <body  class="bg-light">
+    <body  class="bg-light" style="min-width: 750px;">
         <nav class="nav navbar-dark bg-dark text-white p-3 shadow flex flex-column">
             <h1>Anime Info Generator</h1>
             <p class="pb-3">Generates the Up To 15 Matching Results. Information found from <strong>Jikan Anime Database.</strong></p>
